# ai-factory

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  continue.sh  pyproject.toml  run.sh  start.sh
.beads/: interactions.jsonl  issues.jsonl  metadata.json
.github/workflows/: test.yml
docs/: 00_fix.md  01_fix.md  01_refactor.md  FIX.md  check.md  configure.md  fix.md  handoff.md  loopguard-postmortem.md  migration.md  review.md  session-ses_07d9.md  session_crash.md
factory/: STATUS.md
factory/common/: __init__.py  md_bridge.py  (+3 more)
facts/: memories.json
tests/: README.md  _probe.py  conftest.py  run_all.py  status.md  test_00_fix_staging_gate.py  test_00_fix_strict_recovery.py  test_01_fix_harness.py  test_01_fix_liveness.py  test_01_fix_red_team_vocab.py  test_01_fix_strategy_double_encode.py  test_02_fix_status_contract.py  test_audit_surface.py  test_batch_read_ergonomics.py  test_cli_contract.py  test_coder_fn_adapter.py  test_coder_naming.py  test_context_injection.py  test_file_disjoint_filter.py  test_fix_b_loud_blocked_paths.py  test_fix_diff_orig.py  test_fix_kg_injection.py  test_gates.py  test_guard_read_idempotency.py  test_guardrail_changed_line_scoping.py  test_guardrail_silent_continue.py  test_harness_gates.py  test_hbh1_fixes.py  test_jsonl_healer.py  test_loopguard.py  test_loopguard_recovery.py  test_md_bridge.py  test_new_modules.py  test_payload_diet.py  test_planning_gate.py  test_prestage.py  test_read_memory_bridge.py  test_red_team_contract.py  test_rerun_feedback.py  test_sanitizer_malformed_call.py  (+15 more)
(+169 files in other folders)
